8302736: Major performance regression in Math.log on aarch64

Reviewed-by: lucy
Backport-of: 466ec300fc8e5702553123cf2fa4b0d8c7d552d9